--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,11 +3,11 @@
         <div class="container">
           <h1 class="color_light fw_light m_bottom_15">Decentralized Video Monetization Platform</h1>
           <p class="m_bottom_25 color_grey_light_3 fs_large">VirtuTV is a project aimed at developing a next-generation video consumption <br>and monetization platform for Web 3.0.</p> 
-          <div class="d_inline_b clearfix selectbuttons">
-            <a href="/crowdsale" class="select_button_left f_xs_none color_light bg_color_green relative color_green_hover fs_medium tt_uppercase f_left">Contribute to Crowdsale</a>
+          <div class="d_inline_b clearfix">
+            <a href="/crowdsale" onclick="window.open('/crowdsale')" class="select_button_left f_xs_none color_light bg_color_green relative color_green_hover fs_large tt_uppercase f_left">Contribute to Crowdsale</a>
             <div class="f_left or color_light tt_uppercase d_xs_none">or</div>
             {{!-- <br class="d_none d_xs_block"> --}}
-            <a href="#how_it_works" class="select_button_right color_dark f_xs_none bg_light color_light_hover fs_medium relative tt_uppercase f_left">View ICO Details</a>
+            <a href="#how_it_works" class="select_button_right color_dark f_xs_none bg_light color_light_hover fs_large relative tt_uppercase f_left">View ICO Details</a>
           </div>
         </div>
       </section>
@@ -37,7 +37,7 @@
                 </div>
                 <figcaption>
                   <h5 class="color_dark m_bottom_15">Earn More</h5>
-                  <p class="m_bottom_23">Our mission is to treat creators fairly. That's why creators always keep the majority earned.</p>
+                  <p class="m_bottom_23">At VirtuTV, we believe creators should be compensated fairly. That's why creators ALWAYS keep the majority earned.</p>
                 </figcaption>
               </figure>
             </div>
@@ -63,7 +63,7 @@
                 </div>
                 <figcaption>
                   <h5 class="color_dark m_bottom_15">P2P</h5>
-                  <p class="m_bottom_23">VirtuTV is built with Ethereum's smart contract technology.  </p>
+                  <p class="m_bottom_23">VirtuTV is built with Ethereum's network and smart contract technology.</p>
                   {{!-- <a href="#" class="button_type_2 color_dark r_corners fs_medium color_blue_hover tr_all d_inline_b">Read More</a> --}}
                 </figcaption>
               </figure>
@@ -110,8 +110,9 @@
                   <iframe src="https://player.vimeo.com/video/64473966?title=0&amp;byline=0&amp;portrait=0&amp;color=dedede" ></iframe>
                 </div>
                 <br>
-                <a href="/crowdsale" class="color_green fs_large button_type_4 tr_all r_corners tt_uppercase d_inline_b f_left">Contribute To ICO</a>
-                <a href="#" class="fs_medium button_type_2 tr_all r_corners tt_uppercase d_inline_b f_right color_dark bg_light color_light_hover">Download The Whitepaper</a>
+                <a href="/crowdsale" class="color_green fs_large button_type_4 tr_all r_corners tt_uppercase d_inline_b half-width">Contribute To ICO</a><br>
+                <br>
+                <a href="#" class="fs_large button_type_4 tr_all r_corners tt_uppercase d_inline_b color_dark bg_light color_light_hover half-width">Download The Whitepaper</a>
               </div>
             </div>
             {{!-- <div class="col-lg-4 col-md-5" data-appear-animation="fadeInUp" data-appear-animation-delay="600">
