--- a/views/team.handlebars
+++ b/views/team.handlebars
@@ -96,8 +96,10 @@
           <img src="images/mattd.png" alt="" class="r_corners m_bottom_23" height="180px" width="180px">
           <figcaption>
             <h4 class="m_bottom_5"><a href="https://www.linkedin.com/in/mattsplats/" class="color_dark" target="_blank">Matt Davis</a></h4>
+
             <i class="color_grey fs_medium d_inline_b m_bottom_5">Software developer</i>
-            <p class="m_bottom_15">Matt is a rare coding talent and is currently ranked in the top 8% on Hackerrank. He is proficient in a number of languages (Python / Java / C++ / JavaScript), algorithms, data structures, AI and VR (Amazon Echo/Alexa, A-Frame/WebVR), and game development. When he is not building software, he is working as a rockstar coding tutor.
+            <p class="m_bottom_15">Matt is a Software Engineer at Senseye, Inc. where he works on Video processing pipelines and computer vision algorithms. 
+            Matt is a rare coding talent and is currently ranked in the top 8% on Hackerrank. He is proficient in a number of languages (Python / Java / C++ / JavaScript), algorithms, data structures, AI and VR (Amazon Echo/Alexa, A-Frame/WebVR), and game development. Matt is also passionate about teaching and tutors students in coding. 
             </p>
             <ul class="d_inline_b social_icons">
               <li class="m_right_5 d_inline_m m_bottom_5"><a href="https://www.linkedin.com/in/mattsplats/" class="color_grey_light_2 linkedin circle icon_wrap_size_1 d_block" target="_blank"><i class="icon-linkedin-1"></i></a></li>
