--- a/views/team.handlebars
+++ b/views/team.handlebars
@@ -7,13 +7,13 @@
 
 <!--content-->
 <section class="section_offset">
-  <div class="container clearfix">
+  <div class="container clearfix" data-appear-animation="fadeInUp">
     <h3 class="color_dark fw_light m_bottom_15 heading_1 t_align_c">The Team</h3>
     <p class="m_bottom_35 heading_2 t_align_c">We are a fantastic team of passionate developers with a penchant for blockchain technologies. </p>
     <div class="row">
-      <div class="col-lg-4 col-md-4 col-sm-4 m_xs_bottom_30">
+      <div class="col-lg-4 col-md-4 col-sm-4 m_xs_bottom_30" data-appear-animation-delay="200">
         <!--person team-->
-        <figure class="t_align_c">
+        <figure class="t_align_c" data-appear-animation-delay="400">
           <img src="images/Pavank.png" alt="" class="r_corners m_bottom_23" height="180px" width="180px">
           <figcaption>
             <h4 class="m_bottom_5"><a href="https://www.linkedin.com/in/pavankat/" class="color_dark" target="_blank">Pavan Katepalli</a></h4>
@@ -27,7 +27,7 @@
           </figcaption>
         </figure>
       </div>
-      <div class="col-lg-4 col-md-4 col-sm-4 m_xs_bottom_30">
+      <div class="col-lg-4 col-md-4 col-sm-4 m_xs_bottom_30" data-appear-animation-delay="400">
         <!--person team-->
         <figure class="t_align_c">
           <img src="images/vp.jpg" alt="" class="r_corners m_bottom_23" height="180px" width="180px">
@@ -42,7 +42,7 @@
           </figcaption>
         </figure>
       </div>
-      <div class="col-lg-4 col-md-4 col-sm-4 m_xs_bottom_30">
+      <div class="col-lg-4 col-md-4 col-sm-4 m_xs_bottom_30" data-appear-animation-delay="600">
         <!--person team-->
         <figure class="t_align_c">
           <img src="images/nickw.png" alt="" class="r_corners m_bottom_23" height="180px" width="180px">
@@ -60,7 +60,7 @@
     </div>
     <br>
     <div class="row">
-      <div class="col-lg-4 col-md-4 col-sm-4 m_xs_bottom_30">
+      <div class="col-lg-4 col-md-4 col-sm-4 m_xs_bottom_30" data-appear-animation-delay="800">
         <!--person team-->
         <figure class="t_align_c">
           <img src="images/williamv.png" alt="" class="r_corners m_bottom_23" height="180px" width="180px">
@@ -75,7 +75,7 @@
           </figcaption>
         </figure>
       </div>
-      <div class="col-lg-4 col-md-4 col-sm-4 m_xs_bottom_30">
+      <div class="col-lg-4 col-md-4 col-sm-4 m_xs_bottom_30" data-appear-animation-delay="1000">
         <!--person team-->
         <figure class="t_align_c">
           <img src="images/dzmitry.png" alt="" class="r_corners m_bottom_23" height="180px" width="180px">
@@ -90,7 +90,7 @@
           </figcaption>
         </figure>
       </div>
-      <div class="col-lg-4 col-md-4 col-sm-4 m_xs_bottom_30">
+      <div class="col-lg-4 col-md-4 col-sm-4 m_xs_bottom_30" data-appear-animation-delay="1200">
         <!--person team-->
         <figure class="t_align_c">
           <img src="images/mattd.png" alt="" class="r_corners m_bottom_23" height="180px" width="180px">
