--- a/views/crowdsale.handlebars
+++ b/views/crowdsale.handlebars
@@ -2,9 +2,9 @@
 <div class="wide_layout bg_light">
   <!--coming soon-->
   <section class="coming_soon color_light t_align_c">
-    <div class="container">
-      <h1 class="fw_light m_bottom_10">Token Sale</h1>
-      <p class="m_bottom_35 color_grey_light_5">The Crowdsale will commence in:</p>
+    <div class="container" data-appear-animation="fadeInUp">
+      <h1 class="fw_light m_bottom_10" data-appear-animation-delay="200">Token Sale <br>Auguest 9th, 2017, at 6:30PM (EST)</h1>
+      <p class="m_bottom_35 color_grey_light_5" data-appear-animation-delay="400">The Crowdsale will commence in:</p>
       <div id="countdown"></div>
     </div>
   </section>
@@ -16,7 +16,7 @@
     {{info}}
     </div>
     {{/if}}
-    <div class="container clearfix">
+    <div class="container clearfix"  data-appear-animation="fadeInUp">
       <div class="row">
         {{!-- <div class="col-lg-6 col-md-6 col-sm-6 m_xs_bottom_30">
           <h5 class="color_dark m_bottom_23 fw_light">Notify Me</h5>
@@ -28,8 +28,10 @@
           </form>
         </div> --}}
         <div class="col-lg-12 col-md-12 col-sm-12">
-          <h5 class="color_dark m_bottom_20 fw_light">Stay Connected</h5>
-          <ul class="hr_list social_icons">
+          <h5 class="color_dark m_bottom_20 fw_light">Stay Connected And <strong class="color_purple"><a href="https://join.slack.com/t/virtutv/shared_invite/MjE0NjM5NjcwOTE5LTE1MDAyNTIxNzctN2RkYzJiNmU5NQ" target="_blank">
+              Join Our Slack 
+              </a></strong> For Crowdsale Updates</h5>
+          <ul class="hr_list social_icons" data-appear-animation="fadeInUp" data-appear-animation-delay="400">
             <li class="m_right_15 m_bottom_15 tooltip_container">
               <!--tooltip-->
               <span class="d_block r_corners color_default tooltip fs_small tr_all">Follow Us on Twitter</span>
@@ -42,6 +44,13 @@
               <span class="d_block r_corners color_default tooltip fs_small tr_all">View Our Code On Github</span>
               <a href="https://github.com/VirtuTV" class="d_block github icon_wrap_size_2 color_grey_light_2" target="_blank">
                 <i class="icon-github fa-lg fs_small"></i>
+              </a>
+            </li>
+            <li class="m_right_15 m_bottom_15 tooltip_container">
+              <!--tooltip-->
+              <span class="d_block r_corners color_default tooltip fs_small tr_all">Get Updates On Slack</span>
+              <a href="https://join.slack.com/t/virtutv/shared_invite/MjE0NjM5NjcwOTE5LTE1MDAyNTIxNzctN2RkYzJiNmU5NQ" class="d_block slack icon_wrap_size_2 color_grey_light_2" target="_blank">
+                <i class="fa fa-slack fa-lg fs_small"></i>
               </a>
             </li>
           </ul>
