--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -353,7 +353,7 @@
             <br>
             <ul class="hr_list fs_small color_grey_light d_inline_b">
               <li class="m_right_20 f_xs_none m_xs_right_0 m_xs_bottom_5">
-                <a href="mailto:virtutv@protonmail.com" class="color_grey_light d_inline_b color_black_hover"><span class="circle icon_wrap_size_1 d_inline_m m_right_8"><i class="icon-mail-alt"></i></span>virtutv@protonmail.com</a>
+                <a href="mailto:support@virtu.media" class="color_grey_light d_inline_b color_black_hover"><span class="circle icon_wrap_size_1 d_inline_m m_right_8"><i class="icon-mail-alt"></i></span>support@virtu.media</a>
               </li>
             </ul>
           </div>
@@ -375,7 +375,7 @@
               
             </li>
             <li class="container3d relative f_xs_none m_xs_bottom_5">
-              <a class="color_dark fs_large relative r_xs_corners" href="#">Whitepaper
+              <a class="color_dark fs_large relative r_xs_corners" href="/whitepaper">Whitepaper
               </a>
             </li>
             <li class="container3d relative f_xs_none m_xs_bottom_5">
@@ -383,7 +383,7 @@
               </a>
             </li>
             <li class="container3d relative f_xs_none m_xs_bottom_5">
-              <a class="color_dark fs_large relative r_xs_corners" href="https://virtutv.herokuapp.com/" target="_blank"><img src="https://png.icons8.com/slack/color/24" title="Slack" width="15" height="15" style="margin-top: 5px"> Slack
+              <a class="color_dark fs_large relative r_xs_corners" href="https://join.slack.com/t/virtutv/shared_invite/MjE0NjM5NjcwOTE5LTE1MDAyNTIxNzctN2RkYzJiNmU5NQ" target="_blank"><img src="https://png.icons8.com/slack/color/24" title="Slack" width="15" height="15" style="margin-top: 5px"> Slack
               </a>
             </li>
         {{!--     <li class="container3d relative f_xs_none m_xs_bottom_5">
