--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -112,7 +112,7 @@
                 <br>
                 <a href="/crowdsale" class="color_green fs_large button_type_4 tr_all r_corners tt_uppercase d_inline_b half-width">Contribute To ICO</a><br>
                 <br>
-                <a href="/whitepaper" class="fs_large button_type_4 tr_all r_corners tt_uppercase d_inline_b color_dark bg_light color_light_hover half-width" target="_blank">View The Whitepaper</a>
+                <a href="/whitepaper.pdf" class="fs_large button_type_4 tr_all r_corners tt_uppercase d_inline_b color_dark bg_light color_light_hover half-width" target="_blank">View The Whitepaper</a>
               </div>
             </div>
             {{!-- <div class="col-lg-4 col-md-5" data-appear-animation="fadeInUp" data-appear-animation-delay="600">
