--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -375,7 +375,7 @@
               
             </li>
             <li class="container3d relative f_xs_none m_xs_bottom_5">
-              <a class="color_dark fs_large relative r_xs_corners" href="/whitepaper">Whitepaper
+              <a class="color_dark fs_large relative r_xs_corners" href="/whitepaper.pdf">Whitepaper
               </a>
             </li>
             <li class="container3d relative f_xs_none m_xs_bottom_5">
