--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,6 +9,7 @@
     <meta name="author" content="">
     <meta name="keywords" content="">
     <meta name="description" content="">
+    <meta name="google-site-verification" content="DhS7YTFLFl6rP0H8nO6e1AmKGKH7qL15-MhU6SH6tT0" />
     <link rel="shortcut icon" type="image/x-icon" href="images/tv.ico">
     <!--web fonts-->
     <link href='https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic' rel='stylesheet' type='text/css'>
