--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -353,7 +353,7 @@
             <br>
             <ul class="hr_list fs_small color_grey_light d_inline_b">
               <li class="m_right_20 f_xs_none m_xs_right_0 m_xs_bottom_5">
-                <a href="mailto:support@virtu.media" class="color_grey_light d_inline_b color_black_hover"><span class="circle icon_wrap_size_1 d_inline_m m_right_8"><i class="icon-mail-alt"></i></span>support@virtu.media</a>
+                <a href="mailto:info@virtu.media" class="color_grey_light d_inline_b color_black_hover"><span class="circle icon_wrap_size_1 d_inline_m m_right_8"><i class="icon-mail-alt"></i></span>info@virtu.media</a>
               </li>
             </ul>
           </div>
