--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,5 @@
       <!--header image-->
-      <section class="image_bg_6 darkness relative vc_child t_align_c">
+      <section class="image_bg_6 darkness relative vc_child t_align_c lazy" data-original="../images/abstract01.jpeg">
         <div class="container">
           <h1 class="color_light fw_light m_bottom_15">Decentralized Video Monetization Platform</h1>
           <p class="m_bottom_25 color_grey_light_3 fs_large">VirtuTV is a project aimed at developing a next-generation video consumption <br>and monetization platform for Web 3.0.</p> 
@@ -150,9 +150,9 @@
                   <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>Profiles</li>
                 </ul>
             </div>
-            <div class="col-lg-7 col-md-7" data-appear-animation="fadeInUp" data-appear-animation-delay="600">
+            <div class="col-lg-7 col-md-7">
               <div class="relative tablet">
-                <img src="images/mobileview01.png">
+                <img class="lazy" data-original="images/mobileview01.png">
               </div>
             </div>
           </div>
@@ -192,11 +192,11 @@
       <section class="section_offset p_bottom_0">
         <div class="container t_align_c">
           <h3 class="color_dark fw_light m_bottom_15" data-appear-animation="bounceInLeft">More about VirtuTV</h3>
-          <p class="m_bottom_35" data-appear-animation="bounceInLeft" data-appear-animation-delay="150">The VirtuTV platform is perfect for content creators, video course creators, bloggers, podcasters, and journalists. </p>
+          <p class="m_bottom_35">The VirtuTV platform is perfect for content creators, video course creators, bloggers, podcasters, and journalists. </p>
           <div class="relative screens">
             {{!-- <img class="layer_2" src="images/prototype09.png" alt="" data-appear-animation="fadeInUp" data-appear-animation-delay="600" width="60%" height="80%"> --}}
 
-            <img class="layer_1" src="images/prototype08.png" alt="" data-appear-animation="fadeInUp" data-appear-animation-delay="800" width="100%" height="100%">
+            <img class="layer_1 lazy" data-original="images/prototype08.png" alt="" data-appear-animation="fadeInUp" data-appear-animation-delay="800" width="100%" height="100%">
             {{!-- <img class="layer_3" src="images/prototype09.png" alt="" data-appear-animation="fadeInUp" data-appear-animation-delay="1000" width="60%" height="80%"> --}}
           </div>
         </div>
