faq update fees

--- a/views/faq.handlebars
+++ b/views/faq.handlebars
@@ -126,7 +126,7 @@
                 <ul class="color_dark fw_light m_left_15">
                     <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>95% goes to content creators, 5% platform fee, if there is no locked content</li>
                     <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>90% of every donation goes to creators, 5% will go to file streamers, and 5% platform fee, if there is locked content</li>
-                    <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>5% will go to file streamers</li>
+                    {{!-- <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>5% will go to file streamers</li> --}}
                 </ul>
                 <br>
                 <dd class="fw_exbold color_dark">View Fees</dd>
