added Contribution Page for the ICO

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -192,6 +192,9 @@ input[type="radio"] + label:before{
 .fs_ex_small,#countdown.type_2 dd{
 	font-size:0.75em;
 }
+#countdown-2 {
+	font-size:0.55em;
+}
 .fs_small{
 	font-size:0.812em;
 }
@@ -1932,6 +1935,86 @@ time {
 .added_items_list{
 	padding:20px 0 0 2px;
 }
+/* ICO Contribution Page */
+.ico_grid{
+	padding:24px;
+	word-wrap: break-word;
+}
+.ico_box{
+	/*border-right: 0.5px solid #fff;*/
+	margin-left: 0px;
+	margin-right: 0px;
+	height: 250px;
+}
+.ico_box-mid{
+	border-right: 0.5px solid #fff;
+	border-left: 0.5px solid #fff;
+	margin-left: 0px;
+	margin-right: 0px;
+	height: 250px;
+}
+.ico_h5{
+	padding-bottom: 16px;
+	margin-bottom: 16px;
+  margin-left: 16px;
+  margin-right: 16px;
+  border-bottom: 0.5px solid #fff;
+}
+
+.checkbox label:after, 
+.radio label:after {
+    content: '';
+    display: table;
+    clear: both;
+}
+
+.checkbox .cr,
+.radio .cr {
+    position: relative;
+    display: inline-block;
+    border: 1px solid #a9a9a9;
+    border-radius: .25em;
+    width: 1.3em;
+    height: 1.3em;
+    float: left;
+    margin-right: .5em;
+}
+
+.radio .cr {
+    border-radius: 50%;
+}
+
+.checkbox .cr .cr-icon,
+.radio .cr .cr-icon {
+    position: absolute;
+    font-size: .8em;
+    line-height: 0;
+    top: 50%;
+    left: 20%;
+}
+
+.radio .cr .cr-icon {
+    margin-left: 0.04em;
+}
+
+.checkbox label input[type="checkbox"],
+.radio label input[type="radio"] {
+    display: none;
+}
+
+.checkbox label input[type="checkbox"] + .cr > .cr-icon,
+.radio label input[type="radio"] + .cr > .cr-icon {
+    transform: scale(3) rotateZ(-20deg);
+    opacity: 0;
+    transition: all .3s ease-in;
+}
+
+.checkbox label input[type="checkbox"]:checked + .cr > .cr-icon,
+.radio label input[type="radio"]:checked + .cr > .cr-icon {
+    transform: scale(1) rotateZ(0deg);
+    opacity: 1;
+}
+ /* ICO ends*/
 .added_items_list li{
 	padding-right:35px;
 }
@@ -4252,6 +4335,9 @@ input[class*="_limit"]{
 	.zoomContainer,
 	.steps_nav li:not(:last-child):after{
 		display:none;
+	}
+	.p-inline {
+		display:inline;
 	}
 	.d_md_inline_b{
 		display:inline-block;
