first draft of ICO UI finished

--- a/views/contribution.handlebars
+++ b/views/contribution.handlebars
@@ -1,6 +1,6 @@
 <!--layout-->
 <div class="wide_layout bg_light">
-  <section class="header_bottom_part type_3 bg_light">
+  <section class="header_bottom_part type_1 bg_light">
     <div class="container">
       <!--logo-->
       <div class="d_table w_full d_xs_block t_xs_align_c">
@@ -30,94 +30,117 @@
       </div>
     </div>
   </section>
-</div>
-<hr class="d_xs_none">
-<section class="section_offset p_bottom_0">
-  <div class="container bg_color_blue r_corners_2 ico_grid">
-    <h2 class="color_light m_xs_bottom_30 t_align_c ">Contribution</h2>
-    <br>
-    <div class="row t_align_c ">
-      <div class="col-lg-4 col-md-4 col-sm-6">
-        <h5 class="color_light tt_uppercase ico_h5">Finishes in</h5>
-        <div class="row">
+  <hr class="d_xs_none">
+  <section class="image_bg_17 section_offset p_bottom_0" style="margin-bottom: 40px">
+    <div class="container bg_color_blue r_corners_2 ico_grid" style="opacity: .9">
+      <h2 class="color_light m_xs_bottom_30 t_align_c ">Contribution Period</h2>
+      <br>
+      <div class="row t_align_c ">
+        <div class="col-lg-4 col-md-4 col-sm-6">
+          <h5 class="color_light tt_uppercase ico_h5">Finishes in</h5>
+          <div class="row">
+            <div class="col-lg-12 col-md-12 col-sm-8 ico_box">
+              <br>
+              <div id="countdown-2" class="color_purple"></div> 
+              <p class="m_xs_top_20 color_purple"> Wed, 09 Sept 2017 6:30PM (EST) </p>
+            </div>
+          </div>
+        </div> 
+        <div class="col-lg-4 col-md-4 col-sm-6">
+          <h5 class="color_light tt_uppercase ico_h5">ETH Raised</h5>
+          <div class="col-lg-12 col-md-12 col-sm-8 ico_box-mid">
+            <br>
+            <h2 class="color_purple"> 0 <span class="color_purple">ETH</span> </h2> 
+         
+            <p class="fs_large color_purple m_xs_top_20">0 participants</p>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-6">
+          <h5 class="color_light tt_uppercase ico_h5">token distribution</h5>
           <div class="col-lg-12 col-md-12 col-sm-8 ico_box">
             <br>
-            <div id="countdown-2" class="color_purple"></div> 
-            <p class="m_xs_top_20 color_purple"> Wed, 09 Aug 2017 6:30PM (EST) </p>
+            <h2 class="color_purple"> 10 Mil</h2> 
+     
+            <h5 class="color_purple m_xs_top_20">VRTU tokens</h5>
           </div>
         </div>
-      </div> 
-      <div class="col-lg-4 col-md-4 col-sm-6">
-        <h5 class="color_light tt_uppercase ico_h5">ETH Raised</h5>
-        <div class="col-lg-12 col-md-12 col-sm-8 ico_box-mid">
-          <br>
-          <h2 class="color_purple"> 0 <span class="color_purple">ETH</span> </h2> 
-       
-          <p class="fs_large color_purple m_xs_top_20">0 participants</p>
-        </div>
-      </div>
-      <div class="col-lg-4 col-md-4 col-sm-6">
-        <h5 class="color_light tt_uppercase ico_h5">token distribution</h5>
-        <div class="col-lg-12 col-md-12 col-sm-8 ico_box">
-          <br>
-          <h2 class="color_purple"> 10 Mil</h2> 
-   
-          <h5 class="color_purple m_xs_top_20">VRTU tokens</h5>
-        </div>
-      </div>
-    </div>{{!-- End Row--}}
-    <div class="row t_align_c " style="margin-top: 32px">
-      <div class="col-lg-12 col-md-12 col-sm-12">
-        <div class="progress">
-          <div class="progress-bar" role="progressbar" aria-valuenow="1"
-          aria-valuemin="0" aria-valuemax="100" style="width:2%">
-            <span class="sr-only">0% Complete</span>
+      </div>{{!-- End Row--}}
+      <div class="row t_align_c " style="margin-top: 32px">
+        <div class="col-lg-12 col-md-12 col-sm-12">
+          <div class="progress">
+            <div class="progress-bar" role="progressbar" aria-valuenow="1"
+            aria-valuemin="0" aria-valuemax="100" style="width:2%">
+              <span class="sr-only">0% Complete</span>
+            </div>
           </div>
         </div>
-      </div>
-      <h5 class="color_light fw_light m_bottom_10">Hard Cap 0/64500 ETH</h5>
-      <p class="fs_large color_light m_bottom_35 fw_light"> 
-        After hard cap is reached, the contribution period will be closed immediately.
-      </p>
-    </div>{{!-- End Row--}}
-    <div class="row" style="margin-top: 32px">
-      <div class="col-lg-12 col-md-12 col-sm-12">
-        <h3 class="color_light m_xs_bottom_30 t_align_c fw_light">Before you contribute</h3>
-        <br>
-        <div class="checkbox">
-          <label class="color_light fw_light">
-            <input type="checkbox" value="">
-            <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
-            I confirm that I have read the Contribution Terms.
-          </label>
-        </div>
-        <div class="checkbox">
-          <label class="color_light fw_light">
-            <input type="checkbox" value="">
-            <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
-            I understand the maximum gas price when contributing is 50 Gwei and any transaction sent with a higher gas price will be rejected.
-          </label>
-        </div>
-        <div class="checkbox">
-          <label class="color_light fw_light">
-            <input type="checkbox" value="">
-            <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
-            I understand that it may take up to 7 days from the time the contribution period ends to receive Virtucoin.
-          </label>
-        </div>
-        <br>
-        <a href="#" class="button_type_3 tt_uppercase color_purple t_align_c">continue</a>
-        <br>
-        <br>
-        <p class="fs_small color_light m_xs_top_20 fw_light t"> 
-          Please note: 10,000,000 VRTU tokens will be divided and distributed amongst all participants after the contribution period ends. Each participant will receive an allocation proportional to the amount they contributed, relative to the total collected.
+        <h5 class="color_light fw_light m_bottom_10">Hard Cap 0/64500 ETH</h5>
+        <p class="fs_large color_light m_bottom_35 fw_light"> 
+          After hard cap is reached, the contribution period will be closed immediately.
         </p>
-        <br>
-        <br>
-        <a href="/whitepaper.pdf" class="button_type_1 tt_uppercase color_purple fs_small" target="_blank" style="border-radius: 5px">Contribution Terms</a>
-
+      </div>{{!-- End Row--}}
+      {{#if userAgreed}}
+      <div class="row" style="margin-top: 32px">
+        <div class="col-lg-12 col-md-12 col-sm-12 t_align_c">
+          <h3 class="color_light m_xs_bottom_30 fw_light">How to Contribute</h3>
+          <br>
+          <p class="fs_large m_bottom_20 fw_medium" style="color: yellow"> 
+            Important: Maximum allowed gas price is 50 Gwei (50000000000 wei).
+            Recommended gas limit is 200000
+          </p>
+          <p class="fs_large color_light m_bottom_20 fw_light"> 
+            You can send Ether directly to contribution smart contract at:
+          </p>
+          <h3 class="color_purple m_xs_bottom_30 fw_medium">0xf88fibc9c98c.....</h3>
+        </div>
       </div>
-    </div>
-  </div>{{!-- End Container--}}
-</section>
+      {{else}}
+      {{!-- This row must be substituted when user agrees to the terms --}}
+      <div class="row" style="margin-top: 32px">
+        <div class="col-lg-12 col-md-12 col-sm-12">
+          <h3 class="color_light m_xs_bottom_30 t_align_c fw_light">Before you contribute</h3>
+          <br>
+          <form action="/user-agreed" method="post">
+            <input type="hidden" name="_csrf" value="{{csrfToken}}">
+            <div class="checkbox">
+              <label class="color_light fw_light">
+                <input type="checkbox" value="true" name="agree01" required="true">
+                <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+                I confirm that I have read the Contribution Terms.
+              </label>
+            </div>
+            <div class="checkbox">
+              <label class="color_light fw_light">
+                <input type="checkbox" value="true" name="agree02" required="true">
+                <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+                I understand the maximum gas price when contributing is 50 Gwei and any transaction sent with a higher gas price will be rejected.
+              </label>
+            </div>
+            <div class="checkbox">
+              <label class="color_light fw_light">
+                <input type="checkbox" value="true" name="agree03" required="true">
+                <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+                I understand that it may take up to 7 days from the time the contribution period ends to receive Virtucoin.
+              </label>
+            </div>
+            <br>
+            <button class="button_type_3 tt_uppercase color_purple">continue</button>
+          </form>
+        </div>
+      </div>{{!-- End Row--}}
+      {{/if}}
 
+      <div class="row" style="margin-top: 32px">
+        <div class="col-lg-12 col-md-12 col-sm-12 t_align_c">
+          <p class="fs_small color_light m_xs_top_20 fw_light t_align_c"> 
+            Please note: 10,000,000 VRTU tokens will be divided and distributed amongst all participants after the contribution period ends. Each participant will receive an allocation proportional to the amount they contributed, relative to the total collected.
+          </p>
+          <br>
+          <br>
+          <a href="/whitepaper.pdf" class="button_type_1 color_purple fs_small" target="_blank" style="border-radius: 5px">Contribution Terms</a>
+        </div>
+      </div>
+
+    </div>{{!-- End Container--}}
+  </section>
+</div>
