--- a/views/contribution.handlebars
+++ b/views/contribution.handlebars
@@ -32,7 +32,7 @@
   </section>
   <hr class="d_xs_none">
   <section class="image_bg_17 section_offset p_bottom_0" style="margin-bottom: 40px">
-    <div class="container bg_color_blue r_corners_2 ico_grid" style="opacity: .9">
+    <div class="container bg_color_blue r_corners_2 ico_grid">
       <h2 class="color_light m_xs_bottom_30 t_align_c ">Contribution Period</h2>
       <br>
       <div class="row t_align_c ">
