--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -106,9 +106,9 @@
               <div class="relative wrap-video">
                 {{!-- <img class="layer_1" src="images/Diagram08.png" alt="" height="100%"> --}}
                 {{!-- <img class="layer_2" src="images/layer_iphone.png" alt=""> --}}
-                <div class="iframe_video_wrap">
+                {{!-- <div class="iframe_video_wrap">
                   <iframe src="https://player.vimeo.com/video/64473966?title=0&amp;byline=0&amp;portrait=0&amp;color=dedede" ></iframe>
-                </div>
+                </div> --}}
                 <br>
                 <a href="/crowdsale" class="color_green fs_large button_type_4 tr_all r_corners tt_uppercase d_inline_b half-width">Contribute To ICO</a><br>
                 <br>
