--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,7 @@
       <!--header image-->
       <section class="image_bg_6 darkness relative vc_child t_align_c lazy" data-original="../images/abstract01.jpeg">
         <div class="container">
-          <h1 class="color_light fw_light m_bottom_15">Decentralized Video Monetization Platform</h1>
+          <h1 class="color_light fw_light m_bottom_15">We’re Building a Decentralized YouTube, Patreon, and Udemy <br> All-in-One</h1>
           <p class="m_bottom_25 color_grey_light_3 fs_large">VirtuTV is a project aimed at developing a next-generation video consumption <br>and monetization platform for Web 3.0.</p> 
           <div class="d_inline_b clearfix">
             <a href="/crowdsale" onclick="window.open('/crowdsale')" class="select_button_left f_xs_none color_light bg_color_green relative color_green_hover fs_large tt_uppercase f_left">Contribute to Crowdsale</a>
