--- a/views/contribution.handlebars
+++ b/views/contribution.handlebars
@@ -103,38 +103,38 @@
           <form action="/user-agreed" method="post">
             <input type="hidden" name="_csrf" value="{{csrfToken}}">
             <div class="checkbox">
-              <label class="color_light fw_light">
+              <label class="color_purple fw_light">
                 <input type="checkbox" value="true" name="agree01" required="true" onchange="document.getElementById('sendNewSms').disabled = !this.checked;">
                 <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
                 I confirm that I have read the Contribution Terms and Conditions.
               </label>
             </div>
             <div class="checkbox">
-              <label class="color_light fw_light">
+              <label class="color_purple fw_light">
                 <input type="checkbox" value="true" name="agree02" required="true">
                 <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
                 I understand the maximum gas price when contributing is 50 Gwei and any transaction sent with a higher gas price will be rejected.
               </label>
             </div>
             <div class="checkbox">
-              <label class="color_light fw_light">
+              <label class="color_purple fw_light">
                 <input type="checkbox" value="true" name="agree03" required="true">
                 <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
                 I understand that it may take up to 7 days from the time the contribution period ends to receive Virtucoin.
               </label>
             </div>
             <div class="checkbox">
-              <label class="color_light fw_light">
+              <label class="color_purple fw_light">
                 <input type="checkbox" value="true" name="agree04" required="true">
                 <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
-                I hereby confirm to be: <strong>Non US citizen nor signing on behalf of a US citizen.</strong>
+                I hereby confirm that I am a <strong>non US citizen, and that I am not signing on behalf of a US citizen.</strong>
               </label>
             </div>
             <div class="checkbox">
-              <label class="color_light fw_light">
+              <label class="color_purple fw_light">
                 <input type="checkbox" value="true" name="agree05" required="true">
                 <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
-                I hereby acknowledge the following points: Contributor does not receive equity in VirtuTV. Contributions will be used to fullfill the VirtuTV platform's mission.</strong>
+                I hereby acknowledge the following points: Contributor does not receive equity in VirtuTV. Contributions will be used to fulfill the <span class="m_left_35">VirtuTV platform's mission.</span>
               </label>
             </div>
             <br>
@@ -146,7 +146,7 @@
 
       <div class="row" style="margin-top: 32px">
         <div class="col-lg-12 col-md-12 col-sm-12 t_align_c">
-          <p class="fs_small color_light m_xs_top_20 fw_light t_align_c"> 
+          <p class="fs_small color_dark m_xs_top_20 fw_light t_align_c"> 
             Please note: 10,000,000 VRTU tokens will be divided and distributed amongst all participants after the contribution period ends. Each participant will receive an allocation proportional to the amount they contributed, relative to the total collected.
           </p>
           <br>
