--- a/views/crowdsale.handlebars
+++ b/views/crowdsale.handlebars
@@ -3,9 +3,14 @@
   <!--coming soon-->
   <section class="coming_soon color_light t_align_c">
     <div class="container" data-appear-animation="fadeInUp">
-      <h1 class="fw_light m_bottom_10" data-appear-animation-delay="200">Token Sale <br>August 9th, 2017, at 6:30PM (EST)</h1>
-      <p class="m_bottom_35 color_grey_light_5" data-appear-animation-delay="400">The Crowdsale will commence in:</p>
-      <div id="countdown"></div>
+      <div class="row">
+      <h1 class="fw_light m_bottom_10" data-appear-animation-delay="200">Token Sale Date Will Be Announced</h1>
+      {{!-- <p class="m_bottom_35 color_purple" data-appear-animation-delay="400">The Crowdsale will commence in:</p>
+        <div class="col-lg-12 col-md-12">
+          <h4 id="countdown" class="color_purple"></h4>
+
+        </div>
+      </div> --}}
     </div>
   </section>
   <!--content-->
