--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,8 +6,8 @@
           <div class="d_inline_b clearfix">
             <a href="/crowdsale" onclick="window.open('/crowdsale')" class="select_button_left f_xs_none color_light bg_color_green relative color_green_hover fs_large tt_uppercase f_left">Contribute to Crowdsale</a>
             <div class="f_left or color_light tt_uppercase d_xs_none">or</div>
-            {{!-- <br class="d_none d_xs_block"> --}}
-            <a href="#how_it_works" class="select_button_right color_dark f_xs_none bg_light color_light_hover fs_large relative tt_uppercase f_left">View ICO Details</a>
+            <br class="d_none d_xs_block m_xs_top_10">
+            <a href="#how_it_works" class="select_button_right color_dark f_xs_none bg_light color_light_hover fs_large relative tt_uppercase f_left" id="ico-details">View ICO Details</a>
           </div>
         </div>
       </section>
