crowdsale date change

--- a/views/crowdsale.handlebars
+++ b/views/crowdsale.handlebars
@@ -4,13 +4,13 @@
   <section class="coming_soon color_light t_align_c">
     <div class="container" data-appear-animation="fadeInUp">
       <div class="row">
-      <h1 class="fw_light m_bottom_10" data-appear-animation-delay="200">Token Sale Date Will Be Announced</h1>
-      {{!-- <p class="m_bottom_35 color_purple" data-appear-animation-delay="400">The Crowdsale will commence in:</p>
-        <div class="col-lg-12 col-md-12">
+      <h1 class="fw_bold m_bottom_10 color_purple" data-appear-animation-delay="200">Token Sale</h1>
+      <p class="m_bottom_35 color_light" data-appear-animation-delay="400">The Crowdsale date will be announced here.</p>
+        {{!-- <div class="col-lg-12 col-md-12">
           <h4 id="countdown" class="color_purple"></h4>
 
-        </div>
-      </div> --}}
+        </div> --}}
+      </div>
     </div>
   </section>
   <!--content-->
