--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,9 +15,9 @@
     <link href='https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic' rel='stylesheet' type='text/css'>
     <!--lins css-->
      
-{{!--     <link rel="stylesheet" type="text/css" media="all" href="plugins/owl-carousel/owl.carousel.css">
-    <link rel="stylesheet" type="text/css" media="all" href="plugins/owl-carousel/owl.transitions.css"> --}}
-    {{!-- <link rel="stylesheet" type="text/css" media="all" href="plugins/jackbox/css/jackbox.min.css"> --}}
+    <link rel="stylesheet" type="text/css" media="all" href="plugins/owl-carousel/owl.carousel.css">
+    <link rel="stylesheet" type="text/css" media="all" href="plugins/owl-carousel/owl.transitions.css">
+    <link rel="stylesheet" type="text/css" media="all" href="plugins/jackbox/css/jackbox.min.css">
     <!--theme css-->
     <link rel="stylesheet" type="text/css" media="all" href="css/bootstrap.min.css">
     <!-- Latest compiled and minified CSS -->
@@ -62,8 +62,8 @@
      
     <script src="js/countdown.js"></script>
     <!--Theme Initializer-->
-    {{!--<script src="js/theme.js"></script>
-    <script src="js/theme.plugins.js"></script>--}}
+    <script src="js/theme.js"></script>
+    <script src="js/theme.plugins.js"></script>
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.lazyload/1.9.1/jquery.lazyload.min.js"></script>
