--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -164,7 +164,7 @@
           <div class="row">
             <div class="col-lg-12 col-lg-offset-1 col-md-6" data-appear-animation="fadeInUp" data-appear-animation-delay="600">
               <h3 class="color_light fw_light m_bottom_40 m_xs_top_0">ICO Details</h3>
-              <p class="fs_large fw_light color_light m_bottom_25">Our crowdsale begins on Monday, August 9th, 2017 at 6:30PM (EST). </p>
+              <p class="fs_large fw_light color_light m_bottom_25">Our token sale date will be announced on this website. </p>
               <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-6 m_bottom_15">
                   <ul class="color_light fw_light">
