remove date FAQ

--- a/views/faq.handlebars
+++ b/views/faq.handlebars
@@ -100,7 +100,7 @@
                     <i class="icon-plus"></i>
                   </span>
                 </dt>
-                <dd class="fw_light color_dark">The crowdsale begins on Wednesday, August 9th, 2017, at 6:30pm EST. We will provide periodic updates on our website and on our Slack.
+                <dd class="fw_light color_dark">The crowdsale date will be announced on this website and on our social media. We will provide periodic updates on our website and on our Slack.
               </dl>
               <dl class="accordion_item r_corners wrapper m_bottom_5 tr_all">
                 <dt class="accordion_link relative color_dark tr_all">Can you create and stream content and get paid for both?
