--- a/views/team.handlebars
+++ b/views/team.handlebars
@@ -82,7 +82,7 @@
           <figcaption>
             <h4 class="m_bottom_5"><a href="https://www.linkedin.com/in/ddzmitry/" class="color_dark" target="_blank">Dzmitry Dubarau</a></h4>
             <i class="color_grey fs_medium d_inline_b m_bottom_5">Full-stack developer</i>
-            <p class="m_bottom_15">Dzmitry is a Michelin star chef, and was the personal chef to Michael Jordan. He speaks fluently in Russian and Belorussian and holds a degree in Veterinary Medicine. Dzmitry is also a talented software developer and is proficient in various languages including JavaScript and C#. Dzmitry currently works as a full-stack  developer at Telesource.</p>
+            <p class="m_bottom_15">Dzmitry is a Michelin star chef, and was the personal chef to Michael Jordan. He speaks fluently in Russian and Belorussian and holds a degree in Veterinary Medicine. Dzmitry is also a talented software developer and is proficient in various languages including JavaScript, PHP, and C#. Dzmitry currently works as a web developer at Bank of America.</p>
             <ul class="d_inline_b social_icons">
               <li class="m_right_5 d_inline_m m_bottom_5"><a href="https://www.linkedin.com/in/ddzmitry/" class="color_grey_light_2 linkedin circle icon_wrap_size_1 d_block" target="_blank"><i class="icon-linkedin-1"></i></a></li>
               <li class="m_right_5 d_inline_m m_bottom_5"><a href="https://github.com/ddzmitry" class="color_grey_light_2 github circle icon_wrap_size_1 d_block" target="_blank"><i class="fa fa-github fa-lg"></i></a></li>
