changed team member to adviser

--- a/views/team.handlebars
+++ b/views/team.handlebars
@@ -17,7 +17,7 @@
           <img src="images/Pavank.png" alt="" class="r_corners m_bottom_23" height="180px" width="180px">
           <figcaption>
             <h4 class="m_bottom_5"><a href="https://www.linkedin.com/in/pavankat/" class="color_dark" target="_blank">Pavan Katepalli</a></h4>
-            <i class="color_grey fs_medium d_inline_b m_bottom_5">Co-founder, Full-stack developer</i>
+            <i class="color_grey fs_medium d_inline_b m_bottom_5">Adviser, Full-stack developer</i>
             <p class="m_bottom_15">Pavan is a seasoned internet and education entrepreneur with significant startup experience. Currently, he teaches data analytics at UC Berkeley. In the past, he's taught web development at Rutgers University and Barnard College. He is the founder of INRtracker.com, a personal health management tool designed for Warfarin patients, and Chief Learning Officer of Trilogy Education Services, a technology education company, which he helped scale to over 25 colleges across the United States, and over 300 employees.</p>
             <ul class="d_inline_b social_icons">
               <li class="m_right_5 d_inline_m m_bottom_5"><a href="https://www.linkedin.com/in/pavankat/" class="color_grey_light_2 linkedin circle icon_wrap_size_1 d_block" target="_blank"><i class="icon-linkedin-1"></i></a></li>
